Honza collapsable: disable auto open and set open default

--- a/app/templates/components/task-feedback.hbs
+++ b/app/templates/components/task-feedback.hbs
@@ -41,8 +41,8 @@
                         <div id="task-feedback-{{singleFeedback.id}}">
                             {{#if (eq singleFeedback.id "difficult") }}
                                 <div class="lineLegend">
-                                    <span> Lehká </span>
-                                    <span style="float: right;"> Těžká </span>
+                                    <span> Triviální </span>
+                                    <span style="float: right;"> Supertěžká </span>
                                 </div>
                             {{/if}}
                             {{ui-slider
