feedback title change

--- a/app/templates/components/task-feedback.hbs
+++ b/app/templates/components/task-feedback.hbs
@@ -10,7 +10,7 @@
 
     {{#if show}}
     <div class="panel-body" id="task-module-body">
-        <h3 style="text-align: center;">Pomůžeš nám feedbackem?</h3>
+        <h3 style="text-align: center;">Co na to říkáš?</h3>
         <div id="task-feedback" style="width: 470px; margin: auto;">
             {{#each feedbacks.categories as |singleFeedback|}}
                 <div class="single_feedback_category">
