year -> planed calender year
closes #354

--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -108,7 +108,7 @@
         -->
 
   <div class="form-group">
-    <label for="year-maturita">Rok maturity:</label>
+    <label for="year-maturita">(Předpokládaný) kalendařní rok maturity:</label>
     {{input type="number" min="1900" max="2200" value=model.school_finish class="form-control" required=true}}
   </div>
 
