--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -54,7 +54,7 @@
   </div>
   <div class="form-group">
     {{input type="checkbox" checked=karlikSign}}
-    <label>Připojit na konec zprávy Karlíkův podpis</label><br>
+    <label>Připojit na konec zprávy <a href="#" title="Hezký den přeje [ikonka Karlíka]">Karlíkův podpis</a></label><br>
     {{input type="checkbox" checked=easteregg}}
     <label>Připojit do PS easteregg</label>
   </div>
