cursor pointer over logout button
closes #356

--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -64,7 +64,7 @@
                     <li>{{#link-to "profile"}}Profil{{/link-to}}</li>
                     <li>{{#link-to "settings"}}Nastavení{{/link-to}}</li>
                     <li class="divider"></li>
-                    <li><a {{ action 'logout' }} class="header-button">Odhlásit se</a></li> <!-- TODO odhlasit -->
+                    <li><a {{ action 'logout' }} class="header-button cursor-pointer">Odhlásit se</a></li> <!-- TODO odhlasit -->
                   </ul>
                 </li>
             {{else}}
