achievment status duplicity -> error
Closes #349

--- a/app/templates/admin/achievement-grant.hbs
+++ b/app/templates/admin/achievement-grant.hbs
@@ -47,7 +47,7 @@
         </div>
 
         {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=grant_status}}
-        {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=grant_status}}
+        {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=grant_error}}
         {{ale-rt type="warning" style="margin-top:20px;" closeBtn=true text=grant_warning}}
 
         {{#unless saving}}
