60% score limit line
Ref #346

--- a/app/styles/utils/random-stuff.scss
+++ b/app/styles/utils/random-stuff.scss
@@ -2,3 +2,11 @@
 .cursor-pointer {
 	cursor: pointer;
 }
+
+.score_60_limit {
+	position: absolute;
+	left: 60%;
+	width: 2px;
+	height: 20px;
+	background-color: #D22333;
+}
