--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -113,6 +113,7 @@
                     <div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{model.percent}}%">
                         {{model.percent}}&nbsp;%
                     </div>
+                    <div class="progress-bar-ksi score_60_limit"></div>
                 </div>
             {{/if}}
         {{/if}}
