--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -1,7 +1,7 @@
 <div class="controls">
     {{{module.description}}}
 
-    <button class="btn btn-primary btn-task inline hidden-print mtop20" {{action "toggle_info"}}>{{info_button_text}}</button>
+    <button class="btn btn-primary btn-task inline hidden-print mtop20 btn-custom-bigger" {{action "toggle_info"}}>{{info_button_text}}</button>
 
     <div class="hidden-print mtop20">
       {{#if show_info}}
