--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -35,7 +35,7 @@
       {{else}}
           {{#validatable-form action="feedback"}}
             <div class="modal-body">
-              {{ale-rt type="info" text="Prosíme, nepoužívej tento formulář na dotazy k úlohám, či k průběhu semináře. Na tyto dotazy slouží diskuze, nebo e-mail <a href='mailto:ksi@fi.muni.cz'>ksi@fi.muni.cz</a>. Děkujeme."}}
+              {{ale-rt type="info" text="Prosíme, <b>nepoužívej tento formulář na dotazy k úlohám</b>, či k průběhu semináře. Na tyto dotazy slouží diskuze, nebo e-mail <a href='mailto:ksi@fi.muni.cz'>ksi@fi.muni.cz</a>. Děkujeme."}}
 
               <p>Máš nějaký tip nebo nápad, co a jak zlepšit? Vyskočila na tebe nějaká chyba?</p>
 
