--- a/app/templates/components/thread-view.hbs
+++ b/app/templates/components/thread-view.hbs
@@ -2,7 +2,7 @@
     {{year-sealed model=thread.year}}
 {{/if}}
  <div class="alert alert-info">
-            Pokud se chceš zeptat, proč ti nefunguje tvůj kód, pročti si prvně prosím příspěvky ostatních.
+            Pokud se chceš zeptat, proč ti nefunguje tvůj kód, pročti si prosím prvně příspěvky ostatních.
             Ve většině případů se chyby mezi řešiteli opakují a na tvůj problém už možná někdo dostal odpověď.
         </div>
 <ul class="media-list">
