--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -12,7 +12,7 @@
 {{#if opened}}
     <div class="alert alert-warning" role="alert" style="margin-left:0px; margin-top:20px">
         <!-- TODO color poznamky -->
-        <strong>Poznámka:</strong> Soubory můžeš odevzávat postupně (s&nbsp;novým odevzdáním přibudou nové soubory a&nbsp;staré nezmizí). Soubory stejného názvu budou přepsány. Maximální velikost dávky je 20&nbsp;MB, nejvíce lze nahrát 20&nbsp;souborů. Čas na nahrání dávky je nejvýše 60&nbsp;sekund.
+        <strong>Poznámka:</strong> Soubory můžeš odevzdávat postupně (s&nbsp;novým odevzdáním přibudou nové soubory a&nbsp;staré nezmizí). Soubory stejného názvu budou přepsány. Maximální velikost dávky je 20&nbsp;MB, nejvíce lze nahrát 20&nbsp;souborů. Čas na nahrání dávky je nejvýše 60&nbsp;sekund.
     </div>
     <div style="margin-left:0px">
         <h5>Soubory k odevzdání:</h5>
