--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -1,4 +1,8 @@
 <h3 class="visible-print">Diskuze</h3>
 <div style="margin: 20px;">
+    <div class="alert alert-info">
+            Pokud se chceš zeptat, proč ti nefunguje tvůj kód, pročti si prvně prosím příspěvky ostatních.
+            Ve většině případů se chyby mezi řešiteli opakují a na tvůj problém už možná někdo dostal odpověď.
+        </div>
     {{thread-view thread=model.details.thread store=store taskId=model.id}}
 </div>
