--- a/app/templates/settings/personal.hbs
+++ b/app/templates/settings/personal.hbs
@@ -140,12 +140,19 @@
 
   <div class="form-group">
     {{input type="checkbox" checked=model.notify_eval}}
-    <label for="description">Notifikovat o opravení mého řešení.</label>
+    <label for="description">Notifikovat o opravení mého řešení.</label>
 
     <br>
-
     {{input type="checkbox" checked=model.notify_response}}
-    <label for="description">Notifikovat o reakci na můj komentář.</label>
+    <label for="description">Notifikovat o reakci na můj komentář.</label>
+
+    <br>
+    {{input type="checkbox" checked=model.notify_ksi}}
+    <label for="description">Notifikovat o průběhu semináře (vydání nové vlny, ...).</label>
+
+    <br>
+    {{input type="checkbox" checked=model.notify_events}}
+    <label for="description">Zasílat pozvánky na spřátelené akce (InterLoS, InterSoB, ...).</label>
   </div>
 
   <button type="submit" class="btn btn-primary {{if saving "disabled"}}"
