--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -45,6 +45,14 @@
     <label>Pouze úspěšným řešitelům</label>
   </div>
   <div class="form-group">
+    <label>Typ zprávy (důležité pro odhlášení odběru!):</label>
+    {{#x-select value=type class="form-control"}}
+      {{#x-option value=""}}Vyber...{{/x-option}}
+      {{#x-option value="ksi"}}Notifikace o průběhu semináře (vydání nové vlny, ...){{/x-option}}
+      {{#x-option value="events"}}Pozvánka na spřátelenou akci (InterLoS, InterSoB, ...){{/x-option}}
+    {{/x-select}}
+  </div>
+  <div class="form-group">
     <label>Předmět:</label>
     {{input  class="form-control" value=subject}}
   </div>
