--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -58,7 +58,7 @@
     {{input type="checkbox" checked=karlikSign}}
     <label>Připojit na konec zprávy <a title="Hezký den přeje [ikonka Karlíka]" style="cursor: help;">Karlíkův podpis</a></label><br>
   </div>
-  <div class="row" style="margin-bottom:20px; margin-left:0px">
+  <div style="margin-bottom:20px">
     {{#if sending}}
         <button class="btn btn-primary inline disabled">Odesílám...</button>
     {{else}}
