--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -1,4 +1,5 @@
 <section id="admin-email" class="container content-section">
+ {{#validatable-form action="email" model=model}}
   <h2>E-mail</h2>
   <div class="form-group">
     <label>Komu:</label>
@@ -58,14 +59,15 @@
     {{input type="checkbox" checked=karlikSign}}
     <label>Připojit na konec zprávy <a title="Hezký den přeje [ikonka Karlíka]" style="cursor: help;">Karlíkův podpis</a></label><br>
   </div>
-  <div style="margin-bottom:20px">
+  <div class="form-group">
     {{#if sending}}
-        <button class="btn btn-primary inline disabled">Odesílám...</button>
+        <button type="submit" class="btn btn-primary inline disabled">Odesílám...</button>
     {{else}}
-        <button class="btn btn-primary inline" id="send-email-button" {{action "email"}}>Odeslat</button>
+        <button type="submit" class="btn btn-primary inline">Odeslat</button>
     {{/if}}
 
     {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=send_status}}
     {{ale-rt type="danger" style="margin-top:20px;" show=error_show closeBtn=true text=error_status}}
   </div>
+ {{/validatable-form}}
 </section>
