Add proper required fields.

--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -31,7 +31,7 @@
   </div>
   <div class="form-group">
     <label>Reply-To:</label>
-    {{input  class="form-control" value=replyTo}}
+    {{input class="form-control" value=replyTo required=true}}
     (sem by měli řešitelé případně odepisovat)
   </div>
   <div class="form-group">
@@ -49,7 +49,7 @@
   </div>
   <div class="form-group">
     <label>Předmět:</label>
-    {{input  class="form-control" value=subject}}
+    {{input class="form-control" value=subject required=true}}
   </div>
   <div class="form-group">
     <label>Obsah:</label>
