default value of feedback slider
ref #377

--- a/app/templates/components/task-feedback.hbs
+++ b/app/templates/components/task-feedback.hbs
@@ -50,7 +50,7 @@
                                     min=1 
                                     max=5
                                     changed='sliderChanged'
-                                    defaultValue=singleFeedback.answer
+                                    defaultValue=(feedback-slider-default singleFeedback.answer)
                                     }}
                             {{input type="hidden" id=(concat "task-feedback-answer-" singleFeedback.id) value=singleFeedback.answer}}
                         </div>
