fixes on about page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -18,7 +18,7 @@
   <p>
     S ostatními účastníky i organizátory semináře se můžeš během roku potkat na několika výletech.
     Koncem školního roku pak vyhlásíme výsledky a nejlepší řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
-    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) mají možnost si nechat prominout přijímací zkoušku na Fakultu informatiky MU. _(<a href="#prominutiPrijimacek">podrobněji níže</a>)_
+    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) mají možnost si nechat prominout přijímací zkoušku na Fakultu informatiky MU. (<a href="/o-ksi?view=about#prominutiPrijimacek">podrobněji níže</a>)
   </p>
 
   <h3>Jaké úlohy mám očekávat?</h3>
@@ -43,7 +43,7 @@
 
     <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
 
-    <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek. _(<a href="#prominutiPrijimacek">podrobněji níže</a>)_</p></li>
+    <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek. (<a href="/o-ksi?view=about#prominutiPrijimacek">podrobněji níže</a>)</p></li>
 
     <li><p>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě <a href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
 
@@ -106,8 +106,8 @@
     <div class="panel-body">
       A: Na většinu oborů téměř určitě ano. Jsou ovšem dvě výjimky:
       <ul>
-        <li><p>na FI jsou nově otevřeny víceoborová studiu s velmi omezeným počtem míst a nejsou na ně promíjeny přijímačky,</p></li>
-        <li><p>tvé úspěšné řešitelství nesmí být starší dvou let. Pokud by ses stal úspěšným řešitelem už v 1. ročníku střední, toto úspěšné řešitelství by ti přijímačky neprominulu. Od druháku dál už ano.</p></li>
+        <li><p>na FI jsou nově otevřeny víceoborová studia s velmi omezeným počtem míst a nejsou na ně promíjeny přijímačky,</p></li>
+        <li><p>tvé úspěšné řešitelství nesmí být starší dvou let. Pokud by ses stal úspěšným řešitelem už v 1. ročníku střední, toto úspěšné řešitelství by ti přijímačky neprominulo. Od druháku dál už ano.</p></li>
       </ul>
       Organizátoři KSI ale nemohou hovořit za fakultu v otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace na <a href="https://www.fi.muni.cz/admission/info-bachelor.html.cs">oficiálních stránkách Fakulty informatiky MU</a>.
     </div>
