quick nabor page

--- a/app/templates/nabor.hbs
+++ b/app/templates/nabor.hbs
@@ -1,23 +1,19 @@
 <section class="container content-section autojustify" style="margin-bottom:40px;">
   <h2 id="nabor">Staň se organizátorem KSI!</h2>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  Máš zájem pomoct středoškolákům poznat informatiku? Baví tě vymýšlet úlohy?
+  Chceš se přidat do různorodého kolektivu aktivních organizátorů, od prváků až po doktorandy?
+  
+  Pokud je tvá odpověď ano, rozhodně se neváhej nám napsat. Rádi od tebe uslyšíme a setkáme se s tebou.
+  <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>
   </p>
 
-
-  <h3>Nadpis</h3>
   <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  PS: Ano, tahle stránka je work in progress. Pokud by tě vymýšlení úloh moc nebralo,
+  zato by sis ale rád šáhnul na webové technologie a něco reálně užívaného vytvořil,
+  i na tom by se dalo domluvit. Stačí napsat se nám ozvat mailem, nebo se osobně poptat někoho z organizátorů.
+  Jejich seznam je dole na hlavní stránce KSI a je dobrá šance, že se z někým znich znáš nebo tě třeba cvičí. :)
   </p>
+
 
 </section>
