--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -18,7 +18,7 @@
   <p>
     S ostatními účastníky i organizátory semináře se můžeš během roku potkat na několika výletech.
     Koncem školního roku pak vyhlásíme výsledky a nejlepší řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
-    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) mají možnost si nechat prominout přijímací zkoušku na Fakultu informatiky MU. (<a href="/o-ksi?view=about#prominutiPrijimacek">podrobněji níže</a>)
+    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) mají možnost si nechat prominout přijímací zkoušku na Fakultu informatiky MU. (<a href="/o-ksi?view=about#prominutiPrijimacek">podrobněji níže</a>) s
   </p>
 
   <h3>Jaké úlohy mám očekávat?</h3>
@@ -80,7 +80,7 @@
     <a name="somSlovak"></a>
     <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v slovenčine?</div>
     <div class="panel-body">
-      A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se slovenština ~~občas objeví~~ pravidelně objevuje i v zadání.
+      A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se slovenština <strike>občas objeví</strike> pravidelně objevuje i v zadání.
     </div>
   </div>
 
