--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -43,9 +43,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Obsah tohoto webu je poskytován pod licenci
+                    Obsah tohoto webu je poskytován pod licencí
                     <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC&nbsp;BY-NC&nbsp;v4.0</a>.
-                    Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2019.
+                    Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2020.
                 </div>
             </div>
         </div>
