include raw solution

--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -17,6 +17,11 @@
     {{/if}}
   </div>
   {{#if finished}}
+
+    <hr>
+
+    {{ partial "task/solution" }}
+
     {{task-feedback feedbacks=model.feedbacks model=model store=store}}
     <div class="text-center hidden-print">
         {{#link-to "tasks" type="button" class="btn btn-primary btn-lg"}}
