--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -23,7 +23,7 @@
     <div class="hidden-print">
       <div class="panel panel-module-blank" style="margin-left:0px">
         <div class="panel-heading panel-heading-module-blank">
-          Řešení
+          Autorské řešení
         </div>
         <div class="panel-body" id="task-module-body">
           {{ partial "task/solution" }}
