add kdo-organizuje-a-financuje-ksi section

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -130,6 +130,15 @@
     </div>
   </div>
 
+  <div class="panel panel-ksi">
+    <a name="kdoOrganizujeKSI"></a>
+    <div class="panel-heading panel-heading-ksi">Q: Kdo KSI organizuje a podporuje?</div>
+    <div class="panel-body">
+      A: KSI je organizováno studenty a pedagogy Fakulty informatiky Masarykovy univerzity. Mezi organizátory KSI jsou též studenti jiný vysokých škol. 
+      KSI má podporu v rámci projektu na podporu nadaných žáků základních a středních škol vypsaného MŠMT. Projekt je tedy spolufinancován státním rozpočtem České republiky.
+    </div>
+  </div>
+
   <hr>
 
   <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
