fix existing who organizes section

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <section class="container content-section autojustify" style="margin-bottom:40px;">
   <h2 id="about">O KSI</h2>
-  <p>KSI, neboli Korespondenční seminář z informatiky, je celoroční soutěž organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
+  <p>KSI, neboli Korespondenční seminář z informatiky, je celoroční soutěž organizovaná primárně studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.
     Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
   </p>
 
