add msmt textto footer

--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -46,6 +46,10 @@
                     Obsah tohoto webu je poskytován pod licencí
                     <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC&nbsp;BY-NC&nbsp;v4.0</a>.
                     Copyright &copy;&nbsp;<a href="/img/ee/tuxs.gif" target="_blank">KSI</a>&nbsp;2015&ndash;2020.
+                    
+                    <br><br>
+                    Tato aktivita probíhá díky podpoře Ministerstva školství, mládeže a tělovýchovy, <br>
+                    dotace na podporu nadaných žáků základních a středních škol v roce 2020 (projekt č.&nbsp;0039/7/NAD/2020).
                 </div>
             </div>
         </div>
