--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,11 +1,11 @@
 <section id="registration" class="container content-section">
     {{#if registration_done}}
-    {{ale-rt type="info" text="Registrace byla provedna. Nyní se můžeš přihlásit."}}
+    {{ale-rt type="info" text="Registrace byla provedena. Nyní se můžeš přihlásit."}}
   {{else}}
   {{#validatable-form action="register" model=model}}
     <div class="jumbotron" style="background-color: transparent">
         <div class="alert alert-info" role="alert">
-            Od ročníku 2016/2017 mohou KSI řešit bytosti všech věků a&nbsp;pohlaví.
+            Od ročníku 2016/2017 mohou KSI řešit bytosti všech věků.
             Titul úspěšného řešitele a možnost přijetí na FI
             bez přijímacích zkoušek mohou získat i&nbsp;řešitelé v&nbsp;kategorii <i>Ostatní</i>.
             Kategorie, do které budete zařazeni, se odvíjí od roku maturity,
@@ -51,7 +51,7 @@
       </div>
 
       <div class="form-group">
-        <label for="surname">Přijmení:</label>
+        <label for="surname">Příjmení:</label>
         {{input value=model.last_name class="form-control" required=true placeholder="Novák"}}
       </div>
 
@@ -145,7 +145,7 @@
             -->
 
       <div class="form-group">
-        <label for="year-maturita">(Předpokládaný) kalendařní rok maturity:</label>
+        <label for="year-maturita">(Předpokládaný) kalendářní rok maturity:</label>
         {{input type="number" min="1900" max="2200" value=model.school_finish class="form-control" required=true}}
       </div>
 
@@ -155,21 +155,34 @@
             </div>
 
       <div class="form-group">
-        <label for="description">Krátky popis sebe:</label>
+        <label for="description">Krátký popis sebe (nepovinné):</label>
         {{textarea class="form-control" rows="5" value=model.short_info}}
       </div>
 
       <div class="form-group">
-        <label for="tshirt">Velikost trička:</label>
+        <label for="tshirt">Velikost trička (nepovinné):</label>
         {{#x-select value=model.tshirt_size class="form-control" required=true}}
-          {{#x-option value=""}}Prosím vyber{{/x-option}}
           {{#each tshirt_size key="@index" as |item|}}
-            {{#x-option value=item}}
-              {{item}}
+            {{#x-option value=item.short}}
+              {{item.name}}
             {{/x-option}}
           {{/each}}
         {{/x-select}}
       </div>
+
+    <!--
+      <div class="form-group">
+        <label for="referral">Kde ses dozvěděl o KSI? (nepovinné):</label> <br>
+        {{ input type="checkbox" checked=referral.teacher }} Od učitele <br>
+        {{ input type="checkbox" checked=referral.buddy }} Od spolužáka nebo kamaráda <br>
+        {{ input type="checkbox" checked=referral.dod }} Na Dni otevřených dvěří / Open Day FI MU <br>
+        {{ input type="checkbox" checked=referral.leaflet }} Z letáku nebo brožurky <br>
+        {{ input type="checkbox" checked=referral.facebook }} Z Facebooku <br>
+        {{ input type="checkbox" checked=referral.internet }} Z internetu <br>
+        {{ input type="checkbox" checked=referral.other }} Jinde <br>
+      </div>
+    -->
+
 
             <!--<div class="form-group">
                 <label for="photo">Profilová fotografie:</label> (fotografie není povinná, bude se ukazovat na webu v diskusích)
@@ -179,6 +192,27 @@
             Nahraj fotografii
           </button>
             </div>-->
+
+    <hr>
+
+      <p
+        style="font-size: unset;"
+      >
+        {{input type="checkbox" checked=privacyPolicyAccepted}}
+        Souhlasím
+      <a
+        data-toggle="modal"
+        data-target="#gdpr-modal"
+        style="text-decoration: underline; color: #fbb041;"
+        href=""
+      ><!-- Todo: Color should be assigned from scss-->
+        se zpracováním svých osobních údajů
+      </a>
+      </p>
+      {{#if privacyPolicyError}}
+        {{ale-rt type="danger" closeBtn=true text="Abychom Tě mohli zaregistrovat, potřebujeme Tvůj souhlas. Pokud ho nechceš dát, není technicky možné, aby ses zapojil do aktuálního ročníku. Předchozí ročníky jsou ale k dispozici i bez registrace."}}
+      {{/if}}
+
 
             <div align="center" style="margin:30px">
                 <button type="submit" class="btn btn-primary">
@@ -195,4 +229,55 @@
         </div>
     {{/validatable-form}}
     {{/if}}
+
+  <!-- Modal -->
+  <div class="modal fade" id="gdpr-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+    <div class="modal-dialog" role="document" style="width: max(50%, 600px);">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" {{action "close_gdpr"}} aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title"><span class="glyphicon glyphicon-comment" aria-hidden="true" style="padding-right: 20px;"></span>Souhlas se zpracováním tvých údajů</h4>
+        </div>
+        <div class="modal-body">
+          <p>Korespondenční seminář z informatiky (dále KSI) je akcí Fakulty informatiky Masarykovy univerzity (dále FI). Potřebujeme zpracovávat některé Tvé osobní údaje; která a jak se dozvíš níže.</p>
+          <p>Máme údaje Tebou vyplněné v přihlášce, tedy: email, jméno, příjmení, pohlaví, adresu trvalého bydliště, název a adresu Tvé aktuální školy a předpokládaný kalendářní rok maturity. Též můžeš, ale nemusíš, vyplnit svou přezdívku, krátký profil, velikost trička a avatar.</p>
+
+          <p>
+            Na co je používáme?
+          <ul>
+            <li>Pokud se staneš úspěšným řešitelem či úspěšnou řešitelkou, mohou Ti být prominuty přijímací zkoušky na FI. Na to Tě ale FI potřebuje jednoznačně identifikovat. Studijnímu oddělení předáváme jméno, příjmení, pohlaví, bydliště a školu. Tyto informace taky používáme na případné rozeslání diplomů.</li>
+            <li>Pokud budeš aktivní v aktuálním nebo minulém ročníku, propagační oddělení FI by Tě rádo začátkem školního roku informovalo o dalších aktivitách, které pro středoškoláky nabízí. Nejradši to dělají poštou.</li>
+            <li>Zpracováváme data o úspěšnosti a řešení jednotlivých úloh a vlivů externích faktorů na něj, např. zda úlohu zvládají maturanti, ale mladší studenti ne. K tomu využíváme tvůj předpokládaný rok maturity.</li>
+            <li>Na email ti posíláme věci relevantní ke KSI (o opravení úlohy, odpovědi v diskuzi, vydaní nové vlny, apod.) a také pozvánky na spřátelené akce. Po registraci si v nastavení můžeš vybrat, které druhy mailů chceš dostávat.</li>
+          </ul>
+          </p>
+
+          <p>Také uchováváme všechna řešení, která odevzdáš, jejich hodnocení, příspěvky v diskusích, či feedback k úlohám. Toto vše na FI analyzujeme a používáme ke zlepšení KSI (detekce problémů, kontrola opisování, …).</p>
+          <p>Též uchováme IP adresy spojení na servery KSI, abychom byly schopni dohledat technické problémy či útoky. Tvé heslo se po registraci ani změně hesla neukládá v žádné podobě, ze které by ho bylo rozumně možné získat zpět. Můžeme tedy pouze ověřit, že jsi při dalším přihlášení použil stejné heslo.</p>
+          <p>Tvá osobní data nezneužijeme k ničemu, co by nesouviselo s KSI nebo s dalšími aktivitami FI, a nepředáme je nikomu mimo tyto dvě organizace.</p>
+          <p>Veřejně vystavujeme pouze výsledkové listiny, obsahující Tvé jméno a příjmení, název školy a stát, ve kterém se škola nachází, statistiku tebou vyřešených úloh a získaných trofejí, a případně tvůj popisek profilu a avatar, pokud sis nějaký nastavil.</p>
+          <p>Souhlas dáváš Masarykově univerzitě, jelikož FI MU není samostatným subjektem z pohledu GDPR.</p>
+
+          <h4>Souhlas se zpracováním osobních údajů</h4>
+          <p>Tímto uděluji Masarykově univerzitě, Žerotínovo nám. 9, Brno (dále MU), souhlas se zpracováním mých osobních údajů, ke zpracování osobních údajů pro potřeby soutěže Korespondenční seminář informatiky (dále KSI). Souhlas uděluji pro všechny výše uvedené osobní údaje, a to po dobu účasti v semináři a 10 let poté. Též souhlasím s uchováním potřebných dat pro archivační účely i po této lhůtě (výsledkové listiny aj.).</p>
+          <p>MU tyto údaje zpracovává za účelem evidence řešitelů a účastníků KSI, k zajištění celoročního fungování semináře, analýze účinnosti a provádění jednotlivých propagačních akcí MU, zpravodajským účelům a vysokoškolským závěrečným pracím. Osobám, které o to projeví zájem v nastavení svého účtu, může MU také zasílat propagační materiály.</p>
+          <p>Údaje nebudou předány třetí osobě ani využívány k jiným účelům, než ke kterým byly poskytnuty.</p>
+          <p>Tento souhlas uděluji ze své vlastní a svobodné vůle a beru na vědomí, že jej mohu kdykoliv odvolat zasláním e-mailu na adresu ksi@fi.muni.cz. Stejně tak může být požadováno vymazání i z archivních údajů KSI, pokud to bude technicky možné.</p>
+          <p>Dále máte právo:
+          <ul>
+            <li>požádat o informaci, jaké osobní údaje jsou o vás zpracovávány,</li>
+            <li>požadovat opravu osobních údajů, pokud jsou neplatné nebo zastaralé,</li>
+            <li>požadovat, aby nebyly vaše osobní údaje zpracovávány do doby, než bude vyřešena oprávněnost výše uvedených požadavků,</li>
+            <li>požadovat, aby byly vaše osobní údaje předány jinému správci,</li>
+            <li>podat stížnost u dozorového úřadu.</li>
+          </ul>
+          </p>
+          <p>V případě jakéhokoliv dotazu nebo uplatnění svých práv můžete kontaktovat buď organizátory (ksi@fi.muni.cz) nebo pověřence pro ochranu osobních údajů (poverenec@muni.cz).</p>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
