Transform checkboxes to referral string

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -170,18 +170,16 @@
         {{/x-select}}
       </div>
 
-    <!--
       <div class="form-group">
         <label for="referral">Kde ses dozvěděl o KSI? (nepovinné):</label> <br>
-        {{ input type="checkbox" checked=referral.teacher }} Od učitele <br>
-        {{ input type="checkbox" checked=referral.buddy }} Od spolužáka nebo kamaráda <br>
-        {{ input type="checkbox" checked=referral.dod }} Na Dni otevřených dvěří / Open Day FI MU <br>
-        {{ input type="checkbox" checked=referral.leaflet }} Z letáku nebo brožurky <br>
-        {{ input type="checkbox" checked=referral.facebook }} Z Facebooku <br>
-        {{ input type="checkbox" checked=referral.internet }} Z internetu <br>
-        {{ input type="checkbox" checked=referral.other }} Jinde <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.teacher" }} Od učitele <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.buddy" }} Od spolužáka nebo kamaráda <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.dod" }} Na Dni otevřených dvěří / Open Day FI MU <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.leaflet" }} Z letáku nebo brožurky <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.facebook" }} Z Facebooku <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.internet" }} Z internetu <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.other" }} Jinde <br>
       </div>
-    -->
 
 
             <!--<div class="form-group">
