Add information about locally encrypted DB backups

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -254,12 +254,13 @@
           <p>Též uchováme IP adresy spojení na servery KSI, abychom byly schopni dohledat technické problémy či útoky. Tvé heslo se po registraci ani změně hesla neukládá v žádné podobě, ze které by ho bylo rozumně možné získat zpět. Můžeme tedy pouze ověřit, že jsi při dalším přihlášení použil stejné heslo.</p>
           <p>Tvá osobní data nezneužijeme k ničemu, co by nesouviselo s KSI nebo s dalšími aktivitami FI, a nepředáme je nikomu mimo tyto dvě organizace.</p>
           <p>Veřejně vystavujeme pouze výsledkové listiny, obsahující Tvé jméno a příjmení, název školy a stát, ve kterém se škola nachází, statistiku tebou vyřešených úloh a získaných trofejí, a případně tvůj popisek profilu a avatar, pokud sis nějaký nastavil.</p>
+          <p>Celou naši databázi zálohujeme do externího úložiště. Děláme to tak, že ji lokálně zašifrujeme, a teprve šifrovanou ji posíláme k uschování. Ani provozovatel externího úložiště tedy nevidí obsah databáze.</p>
           <p>Souhlas dáváš Masarykově univerzitě, jelikož FI MU není samostatným subjektem z pohledu GDPR.</p>
 
           <h4>Souhlas se zpracováním osobních údajů</h4>
           <p>Tímto uděluji Masarykově univerzitě, Žerotínovo nám. 9, Brno (dále MU), souhlas se zpracováním mých osobních údajů, ke zpracování osobních údajů pro potřeby soutěže Korespondenční seminář informatiky (dále KSI). Souhlas uděluji pro všechny výše uvedené osobní údaje, a to po dobu účasti v semináři a 10 let poté. Též souhlasím s uchováním potřebných dat pro archivační účely i po této lhůtě (výsledkové listiny aj.).</p>
           <p>MU tyto údaje zpracovává za účelem evidence řešitelů a účastníků KSI, k zajištění celoročního fungování semináře, analýze účinnosti a provádění jednotlivých propagačních akcí MU, zpravodajským účelům a vysokoškolským závěrečným pracím. Osobám, které o to projeví zájem v nastavení svého účtu, může MU také zasílat propagační materiály.</p>
-          <p>Údaje nebudou předány třetí osobě ani využívány k jiným účelům, než ke kterým byly poskytnuty.</p>
+          <p>Údaje nebudou předány třetí osobě mimo MU (s vyjímkou šifrovaných záloh) ani využívány k jiným účelům, než ke kterým byly poskytnuty.</p>
           <p>Tento souhlas uděluji ze své vlastní a svobodné vůle a beru na vědomí, že jej mohu kdykoliv odvolat zasláním e-mailu na adresu ksi@fi.muni.cz. Stejně tak může být požadováno vymazání i z archivních údajů KSI, pokud to bude technicky možné.</p>
           <p>Dále máte právo:
           <ul>
