Add referral to registration

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -175,10 +175,9 @@
         {{ input type="checkbox" class="referralCheckboxes" id="referral.teacher" }} Od učitele <br>
         {{ input type="checkbox" class="referralCheckboxes" id="referral.buddy" }} Od spolužáka nebo kamaráda <br>
         {{ input type="checkbox" class="referralCheckboxes" id="referral.dod" }} Na Dni otevřených dvěří / Open Day FI MU <br>
-        {{ input type="checkbox" class="referralCheckboxes" id="referral.leaflet" }} Z letáku nebo brožurky <br>
+        {{ input type="checkbox" class="referralCheckboxes" id="referral.letter" }} Z dopisu <br>
         {{ input type="checkbox" class="referralCheckboxes" id="referral.facebook" }} Z Facebooku <br>
-        {{ input type="checkbox" class="referralCheckboxes" id="referral.internet" }} Z internetu <br>
-        {{ input type="checkbox" class="referralCheckboxes" id="referral.other" }} Jinde <br>
+        {{ input id="referral-other" placeholder="Jinde" }}
       </div>
 
 
