Change html element with privacy policy
It works with both <a> and <span> link. The only difference is that with <a> link browsers show base URL as ksi.fi.muni.cz and some people might try to open it in new window, instead of modal.

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -197,14 +197,14 @@
       >
         {{input type="checkbox" checked=privacyPolicyAccepted}}
         Souhlasím
-      <a
+      <span
         data-toggle="modal"
         data-target="#gdpr-modal"
         style="text-decoration: underline; color: #fbb041;"
         href=""
       ><!-- Todo: Color should be assigned from scss-->
         se zpracováním svých osobních údajů
-      </a>
+      </span>
       </p>
       {{#if privacyPolicyError}}
         {{ale-rt type="danger" closeBtn=true text="Abychom Tě mohli zaregistrovat, potřebujeme Tvůj souhlas. Pokud ho nechceš dát, není technicky možné, aby ses zapojil do aktuálního ročníku. Předchozí ročníky jsou ale k dispozici i bez registrace."}}
