Add pointer hand to privacy policy link (modal launcher)

--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -200,7 +200,7 @@
       <span
         data-toggle="modal"
         data-target="#gdpr-modal"
-        style="text-decoration: underline; color: #fbb041;"
+        style="text-decoration: underline; color: #fbb041; cursor: pointer;"
         href=""
       ><!-- Todo: Color should be assigned from scss-->
         se zpracováním svých osobních údajů
