Add note: don't embed source codes to discussion
Closes #432

--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -3,6 +3,8 @@
     <div class="alert alert-info">
             Pokud se chceš zeptat, proč ti nefunguje tvůj kód, pročti si prvně prosím příspěvky ostatních.
             Ve většině případů se chyby mezi řešiteli opakují a na tvůj problém už možná někdo dostal odpověď.
+            <br>
+            Také prosím nevkládej své řešení do diskuze - kazilo by to zábavu ostatním řešitelům. Organizátoři mají přístup k tvému nejnovějšímu odevzdání sami.
         </div>
     {{thread-view thread=model.details.thread store=store taskId=model.id}}
 </div>
