Add url to monitoring dashboard to admin menu bar

--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -14,6 +14,7 @@
           <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/execs"}}Spuštění{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/correcting"}}Opravování{{/link-to}}</li>
+          <li class="navbar-admin-li"><a id="link-to-monitoring-dashboard" href="#">Monitorovací nástěnka</a></li>
         </ul>
       </div>
     </div><!-- /.navbar-collapse -->
